Change Log for the check-aloxe plugin:

1.1     (06 May 2019)
        Initial plugin release

1.2     (12 Jul 2019)
        - Fix error in checking minimum timeout
        - Set a more generic prompt in telnet

1.3     (03 Jul 2020)
        - Changed output on link and trunk modes to display Busy instead of Free Channels
        - Added perfdata output values for link and trunk modes for creating weathermap
		  lines in NagVis

2.0     (10 Jul 2020)
        - Added mode=appid that displays the Application software identity running on the PBX
        - Removed overchecking for valid arguments

2.1     (19 Oct 2020)
        - Added ability to provide telnet credentials via command line arguments (issue #1)